added title elements

--- a/src/app/components/shared/footer/footer.component.html
+++ b/src/app/components/shared/footer/footer.component.html
@@ -1,13 +1,13 @@
 <footer >
 
   <mat-toolbar id="footer-toolbar">
-    <button mat-button (click)="navToBlog()" *ngIf="router.url !== '/home'" aria-label="Zu Blog navigieren.">
+    <button mat-button (click)="navToBlog()" *ngIf="router.url !== '/home'" title="Blog anzeigen."  aria-label="TMP">
       <mat-icon>help_outline</mat-icon>
       <span *ngIf="deviceType === 'desktop'">
         {{ 'footer.help' | translate }}
       </span>
     </button>
-    <button mat-button (click)="showDemo()" *ngIf="router.url === '/home'" aria-label="In neuem Dialog ein Demonstrationsvideo anzeigen.">
+    <button mat-button (click)="showDemo()" *ngIf="router.url === '/home'"  title="Demonstrationsvideo zu Frag.jetzt anzeigen."  aria-label="TMP">
       <mat-icon>ondemand_video</mat-icon>
       <span *ngIf="deviceType === 'desktop'">
         {{ 'footer.demo' | translate }}
@@ -15,7 +15,7 @@
     </button>
 
     <span class="fill-remaining-space"></span>
-    <button mat-button [matMenuTriggerFor]="themeMenu" aria-label="Auswahl des Seitenlayouts." aria-disabled="true">
+    <button mat-button [matMenuTriggerFor]="themeMenu"  title="Seitenlayout-Dialog anzeigen"  aria-label="TMP">
       <mat-icon>palette</mat-icon>
       <span *ngIf="deviceType === 'desktop'">
           {{'footer.style' | translate}}
@@ -23,7 +23,7 @@
     </button>
 
     <span class="fill-remaining-space"></span>
-    <button mat-button [matMenuTriggerFor]="langMenu" aria-label="Sprachauswahl zwischen Deutsch und Englisch.">
+    <button mat-button [matMenuTriggerFor]="langMenu" title="Sprachauswahl zwischen Deutsch und Englisch"  aria-label="TMP">
       <mat-icon>language</mat-icon>
       <span *ngIf="deviceType === 'desktop'">
           {{'footer.language' | translate}}
@@ -31,21 +31,21 @@
     </button>
 
     <span class="fill-remaining-space"></span>
-    <button mat-button (click)="navToDSGVO()"  aria-label="Datenschutzgrundverordnung anzeigen.">
+    <button mat-button (click)="navToDSGVO()"  title="Datenschutzgrundverordnung anzeigen."  aria-label="TMP">
       <mat-icon>security</mat-icon>
       <span *ngIf="deviceType === 'desktop'">
         {{ 'footer.dsgvo' | translate}}
       </span>
     </button>
     <span class="fill-remaining-space"></span>
-    <button mat-button (click)="navToImprint()" aria-label="Impressum anzeigen.">
+    <button mat-button (click)="navToImprint()" title="Kontaktinformationen anzeigen."  aria-label="TMP">
       <mat-icon>info</mat-icon>
       <span *ngIf="deviceType === 'desktop'">
         {{ 'footer.imprint' | translate}}
       </span>
     </button>
 
-    <mat-menu class="color-menu" #themeMenu="matMenu" [overlapTrigger]="false" aria-disabled="true">
+    <mat-menu class="color-menu" #themeMenu="matMenu" [overlapTrigger]="false" aria-disabled="true" >
       <mat-grid-list cols="2">
         <mat-grid-tile>
           <button mat-icon-button class="default color-button" (click)="changeTheme('arsnova')">
@@ -75,8 +75,8 @@
     </mat-menu>
 
     <mat-menu #langMenu="matMenu" [overlapTrigger]="false">
-      <button mat-menu-item (click)="useLanguage('de')" aria-label="Deutsch als Sprache auswählen.">{{ 'footer.german' | translate }}</button>
-      <button mat-menu-item (click)="useLanguage('en')" aria-label="Englisch als Sprache auswählen.">{{ 'footer.english' | translate }}</button>
+      <button mat-menu-item (click)="useLanguage('de')" title="Deutsch als Sprache auswählen."  aria-label="TMP">{{ 'footer.german' | translate }}</button>
+      <button mat-menu-item (click)="useLanguage('en')" title="Englisch als Sprache auswählen." aria-label="TMP">{{ 'footer.english' | translate }}</button>
     </mat-menu>
   </mat-toolbar>
 </footer>
