--- a/src/app/components/shared/header/header.component.html
+++ b/src/app/components/shared/header/header.component.html
@@ -1,8 +1,7 @@
 <mat-toolbar class="mat-elevation-z4">
   <mat-toolbar-row>
     <button mat-icon-button *ngIf="router.url !== '/home'" (click)="goBack()"
-            matTooltip="{{'header.back' | translate}}" aria-label="" aria-describeby="aria_desc_backDescription" id="BACKICONBTN">
-      <p style="display:none;" id="aria_desc_backDescription">GEHE EINE SEITE ZURÜCK</p>
+            matTooltip="{{'header.back' | translate}}"  title="" aria-label="TMP">
       <mat-icon class="header-icons" aria-label="Go back">keyboard_arrow_left</mat-icon>
     </button>
     <span class="fill-remaining-space"></span>
@@ -26,22 +25,22 @@
     <span class="fill-remaining-space"></span>
 
     <mat-menu #userMenu="matMenu" [overlapTrigger]="false">
-      <button mat-menu-item *ngIf="user" routerLink="/user" aria-label="">
+      <button mat-menu-item *ngIf="user" routerLink="/user" title="TIT" aria-label="TMP">
         <mat-icon class="sessions">work</mat-icon>
         <span *ngIf="!user.isGuest">{{'header.my-sessions' | translate}}</span>
         <span *ngIf="user.isGuest">{{'header.visited-sessions' | translate}}</span>
       </button>
-      <button mat-menu-item *ngIf="user && !user.isGuest" (click)="openDeleteUserDialog()" aria-label="Benutzer loeschen.">
+      <button mat-menu-item *ngIf="user && !user.isGuest" (click)="openDeleteUserDialog()" aria-label="TMP" title="Button um den Benutzer zu löschen.">
         <mat-icon color="warn">delete_sweep</mat-icon>
         <span>{{'header.delete-account' | translate}}</span>
       </button>
-      <button mat-menu-item (click)="logout()" aria-label="Ausloggen.">
+      <button mat-menu-item (click)="logout()" title="Button um den Benutzer abzumelden." aria-label="TMP">
         <mat-icon color="warn">exit_to_app</mat-icon>
         <span>{{ 'header.logout' | translate }}</span>
       </button>
     </mat-menu>
 
-    <button mat-button *ngIf="user && deviceType === 'desktop'" [matMenuTriggerFor]="userMenu" aria-label="TMP">
+    <button mat-button *ngIf="user && deviceType === 'desktop'" [matMenuTriggerFor]="userMenu" title="TIT" aria-label="TMP">
       <div class="label-icon">
         <mat-icon *ngIf="!user.isGuest" class="header-icons">account_box</mat-icon>
         <mat-icon *ngIf="user.isGuest" class="header-icons">meeting_room</mat-icon>
@@ -50,19 +49,19 @@
       </div>
     </button>
 
-    <button mat-icon-button *ngIf="user && deviceType === 'mobile'" [matMenuTriggerFor]="userMenu" aria-label="TMP">
+    <button mat-icon-button *ngIf="user && deviceType === 'mobile'" [matMenuTriggerFor]="userMenu"  title="TIT">
       <mat-icon *ngIf="!user.isGuest" class="header-icons">account_box</mat-icon>
       <mat-icon *ngIf="user.isGuest" class="header-icons">meeting_room</mat-icon>
     </button>
 
-    <button mat-button *ngIf="!user && deviceType === 'desktop'" (click)="login(false);" aria-label="TMP">
+    <button mat-button *ngIf="!user && deviceType === 'desktop'" (click)="login(false);" aria-label="Button zum einloggen." title="Button zum einloggen.">
       <div class="label-icon">
         <mat-icon class="header-icons">account_box</mat-icon>
         <h3 *ngIf="deviceType === 'desktop'">{{'header.login' | translate}}</h3>
       </div>
     </button>
 
-    <button mat-icon-button *ngIf="!user && deviceType === 'mobile'" (click)=login(false) aria-label="TMP">
+    <button mat-icon-button *ngIf="!user && deviceType === 'mobile'" (click)=login(false) title="TIT" aria-label="TMP">
       <mat-icon class="header-icons">account_box</mat-icon>
     </button>
   </mat-toolbar-row>
