--- a/src/app/components/shared/login/login.component.html
+++ b/src/app/components/shared/login/login.component.html
@@ -1,6 +1,6 @@
 <form fxLayout="column" fxLayoutAlign="space-around" fxLayoutGap="5px">
   <button (click)="guestLogin()" class="guest" mat-raised-button type="button"
-          matTooltip="{{'login.guest-login-tooltip' | translate}}">
+          matTooltip="{{'login.guest-login-tooltip' | translate}}" title="Als Gast einloggen.">
     {{ 'login.guest-login' | translate }}
   </button>
   <mat-form-field class="input-block">
@@ -19,7 +19,7 @@
     <mat-error *ngIf="passwordFormControl.hasError('required')">{{ 'login.password-required' | translate }}</mat-error>
   </mat-form-field>
   <button (click)="login(userEmail.value, userPassword.value)" mat-raised-button
-          matTooltip="{{'login.login-tooltip' | translate}}">{{ 'login.login' | translate }}</button>
+          matTooltip="{{'login.login-tooltip' | translate}}" title="Als angemeldeter Benutzer einloggen.">{{ 'login.login' | translate }}</button>
   <div>
     <button (click)="openPasswordDialog()" class="pwReset" mat-button>
       {{ 'login-page.password-reset' | translate }}
