--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,11 @@
   <div fxLayout="column" fxFill appTheme>
-    <app-header #header></app-header>
-    <div fxFlex class="app-component">
-      <router-outlet></router-outlet>
-    </div>
-    <app-footer></app-footer>
+    <header>
+      <app-header #header></app-header>
+    </header>
+      <main fxFlex class="app-component">
+        <router-outlet></router-outlet>
+      </main>
+    <footer role="contentinfo">
+      <app-footer></app-footer>
+    </footer>
   </div>
