--- a/src/app/components/shared/room-join/room-join.component.html
+++ b/src/app/components/shared/room-join/room-join.component.html
@@ -11,7 +11,7 @@
       <mat-error *ngIf="roomFormControl.hasError('required')">{{ 'home-page.please-enter' | translate}}</mat-error>
       <mat-error *ngIf="roomFormControl.hasError('pattern')">{{ 'home-page.only-numbers' | translate}}</mat-error>
     </mat-form-field>
-      <button mat-fab type="submit" aria-label="Beitreten-Button. Betritt den Raum, dessen Session-ID im Textfeld angegeben ist">
+      <button mat-fab type="submit" title="{{'home-page.accessibility-join' | translate}}" >
       <mat-icon>input</mat-icon>
     </button>
   </div>
