Change aria-label to title to guarantee accessibility of screen readers in english and german

--- a/src/app/components/shared/header/header.component.scss
+++ b/src/app/components/shared/header/header.component.scss
@@ -30,6 +30,12 @@ h2 {
   font-size: medium;
 }
 
+h3 {
+  color: var(--on-surface);
+  margin-left: 5px;
+  font-size: medium;
+}
+
 .label-icon {
   display: flex;
   align-items: center;
