--- a/src/app/components/shared/footer/footer.component.html
+++ b/src/app/components/shared/footer/footer.component.html
@@ -6,7 +6,7 @@
         {{ 'footer.help' | translate }}
       </span>
     </button>
-    <button mat-button (click)="showDemo()" aria-label = "Zeigt ein Video" *ngIf="router.url === '/home'">
+    <button mat-button (click)="showDemo()" title = "{{'footer.demo-title' | translate}}" *ngIf="router.url === '/home'">
       <mat-icon>ondemand_video</mat-icon>
       <span *ngIf="deviceType === 'desktop'">
         {{ 'footer.demo' | translate }}
@@ -14,7 +14,7 @@
     </button>
 
     <span class="fill-remaining-space"></span>
-    <button mat-button [matMenuTriggerFor]="themeMenu" aria-label = "Ändern Sie die Farbanzeigen">
+    <button mat-button [matMenuTriggerFor]="themeMenu" title = "{{'footer.style-title' | translate}}">
       <mat-icon>palette</mat-icon>
       <span *ngIf="deviceType === 'desktop'">
           {{'footer.style' | translate}}
@@ -22,7 +22,7 @@
     </button>
 
     <span class="fill-remaining-space"></span>
-    <button mat-button [matMenuTriggerFor]="langMenu" aria-label = "Ändern Sie die Sprache">
+    <button mat-button [matMenuTriggerFor]="langMenu" title = "{{'footer.language-title' | translate}}">
       <mat-icon>language</mat-icon>
       <span *ngIf="deviceType === 'desktop'">
           {{'footer.language' | translate}}
@@ -30,14 +30,14 @@
     </button>
 
     <span class="fill-remaining-space"></span>
-    <button mat-button (click)="navToDSGVO()" aria-label = "DSGVO anzeigen">
+    <button mat-button (click)="navToDSGVO()" title = "{{'footer.dsgvo-title' | translate}}">
       <mat-icon>security</mat-icon>
       <span *ngIf="deviceType === 'desktop'">
         {{ 'footer.dsgvo' | translate}}
       </span>
     </button>
     <span class="fill-remaining-space"></span>
-    <button mat-button (click)="navToImprint()" aria-label = "Informationsseite anzeigen">
+    <button mat-button (click)="navToImprint()" title = "{{'footer.imprint-title' | translate}}">
       <mat-icon>info</mat-icon>
       <span *ngIf="deviceType === 'desktop'">
         {{ 'footer.imprint' | translate}}
