Add missing header html tag to app.component.html header, Mode footer html tag to app.component.html as well, Improve accessibility of home page by adding / modifying descriptions

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,11 @@
   <div fxLayout="column" fxFill appTheme>
-    <app-header #header></app-header>
+    <header>
+      <app-header #header></app-header>
+    </header>
     <div fxFlex class="app-component">
       <router-outlet></router-outlet>
     </div>
-    <app-footer></app-footer>
+    <footer>
+      <app-footer></app-footer>
+    </footer>
   </div>
