--- a/src/app/components/shared/footer/footer.component.html
+++ b/src/app/components/shared/footer/footer.component.html
@@ -1,85 +1,95 @@
-<footer>
-  <mat-toolbar id="footer-toolbar">
-    <button mat-button (click)="navToBlog()" *ngIf="router.url !== '/home'" title="Hilfe">
-      <mat-icon>help_outline</mat-icon>
-      <span *ngIf="deviceType === 'desktop'">
-        {{ 'footer.help' | translate }}
-      </span>
-    </button>
-    <button mat-button (click)="showDemo()" *ngIf="router.url === '/home'" title="Demo Video">
-      <mat-icon>ondemand_video</mat-icon>
-      <span *ngIf="deviceType === 'desktop'">
-        {{ 'footer.demo' | translate }}
-      </span>
-    </button>
+<mat-toolbar id="footer-toolbar">
+  <button mat-button (click)="navToBlog()" *ngIf="router.url !== '/home'"
+          title="{{ 'footer.help-description' | translate }}">
+    <mat-icon>help_outline</mat-icon>
+    <span *ngIf="deviceType === 'desktop'">
+      {{ 'footer.help' | translate }}
+    </span>
+  </button>
+  <button mat-button (click)="showDemo()" *ngIf="router.url === '/home'"
+          title="{{ 'footer.demo-description' | translate }}">
+    <mat-icon>ondemand_video</mat-icon>
+    <span *ngIf="deviceType === 'desktop'">
+      {{ 'footer.demo' | translate }}
+    </span>
+  </button>
 
-    <span class="fill-remaining-space"></span>
-    <button mat-button [matMenuTriggerFor]="themeMenu" title="Stil wählen">
-      <mat-icon>palette</mat-icon>
-      <span *ngIf="deviceType === 'desktop'">
-          {{'footer.style' | translate}}
-        </span>
-    </button>
+  <span class="fill-remaining-space"></span>
+  <button mat-button [matMenuTriggerFor]="themeMenu"
+          title="{{ 'footer.style-description' | translate }}">
+    <mat-icon>palette</mat-icon>
+    <span *ngIf="deviceType === 'desktop'">
+        {{ 'footer.style' | translate }}
+    </span>
+  </button>
 
-    <span class="fill-remaining-space"></span>
-    <button mat-button [matMenuTriggerFor]="langMenu" title="Sprache">
-      <mat-icon>language</mat-icon>
-      <span *ngIf="deviceType === 'desktop'">
-          {{'footer.language' | translate}}
-        </span>
-    </button>
+  <span class="fill-remaining-space"></span>
+  <button mat-button [matMenuTriggerFor]="langMenu"
+          title="{{ 'footer.language-description' | translate }}">
+    <mat-icon>language</mat-icon>
+    <span *ngIf="deviceType === 'desktop'">
+        {{ 'footer.language' | translate }}
+    </span>
+  </button>
 
-    <span class="fill-remaining-space"></span>
-    <button mat-button (click)="navToDSGVO()" title="Datenschutzerklärung">
-      <mat-icon>security</mat-icon>
-      <span *ngIf="deviceType === 'desktop'">
-        {{ 'footer.dsgvo' | translate}}
-      </span>
-    </button>
-    <span class="fill-remaining-space"></span>
-    <button mat-button (click)="navToImprint()" title="Impressum">
-      <mat-icon>info</mat-icon>
-      <span *ngIf="deviceType === 'desktop'">
-        {{ 'footer.imprint' | translate}}
-      </span>
-    </button>
+  <span class="fill-remaining-space"></span>
+  <button mat-button (click)="navToDSGVO()"
+          title="{{ 'footer.dsgvo-description' | translate }}">
+    <mat-icon>security</mat-icon>
+    <span *ngIf="deviceType === 'desktop'">
+      {{ 'footer.dsgvo' | translate }}
+    </span>
+  </button>
+  <span class="fill-remaining-space"></span>
+  <button mat-button (click)="navToImprint()"
+          title="{{ 'footer.imprint-description' | translate }}">
+    <mat-icon>info</mat-icon>
+    <span *ngIf="deviceType === 'desktop'">
+      {{ 'footer.imprint' | translate }}
+    </span>
+  </button>
 
-    <mat-menu class="color-menu" #themeMenu="matMenu" [overlapTrigger]="false">
-      <mat-grid-list cols="2">
-        <mat-grid-tile>
-          <button mat-icon-button class="default color-button" (click)="changeTheme('arsnova')">
-            <mat-icon class="color-icon" matTooltip="{{ 'footer.bright' | translate }}">lens</mat-icon>
-            <mat-icon *ngIf="themeClass === 'arsnova'" class="check">check_circle</mat-icon>
-          </button>
-        </mat-grid-tile>
-        <mat-grid-tile>
-          <button mat-icon-button class="dark color-button" (click)="changeTheme('dark')">
-            <mat-icon class="color-icon" matTooltip="{{ 'footer.dark' | translate }}">lens</mat-icon>
-            <mat-icon *ngIf="themeClass === 'dark'" class="check">check_circle</mat-icon>
-          </button>
-        </mat-grid-tile>
-        <mat-grid-tile>
-          <button mat-icon-button class="purple color-button" (click)="changeTheme('purple')">
-            <mat-icon class="color-icon" matTooltip="{{ 'footer.beamer' | translate }}">lens</mat-icon>
-            <mat-icon *ngIf="themeClass === 'purple'" class="check">check_circle</mat-icon>
-          </button>
-        </mat-grid-tile>
-        <mat-grid-tile>
-          <button mat-icon-button class="blue color-button" (click)="changeTheme('blue')">
-            <mat-icon class="color-icon" matTooltip="{{ 'footer.wai' | translate }}">lens</mat-icon>
-            <mat-icon *ngIf="themeClass === 'blue'" class="check">check_circle</mat-icon>
-          </button>
-        </mat-grid-tile>
-      </mat-grid-list>
-    </mat-menu>
+  <mat-menu class="color-menu" #themeMenu="matMenu" [overlapTrigger]="false">
+    <mat-grid-list cols="2">
+      <mat-grid-tile>
+        <button mat-icon-button class="default color-button" (click)="changeTheme('arsnova')"
+                title="{{ 'footer.bright-description' | translate }}">
+          <mat-icon class="color-icon" matTooltip="{{ 'footer.bright' | translate }}">lens</mat-icon>
+          <mat-icon *ngIf="themeClass === 'arsnova'" class="check">check_circle</mat-icon>
+        </button>
+      </mat-grid-tile>
+      <mat-grid-tile>
+        <button mat-icon-button class="dark color-button" (click)="changeTheme('dark')"
+                title="{{ 'footer.dark-description' | translate }}">
+          <mat-icon class="color-icon" matTooltip="{{ 'footer.dark' | translate }}">lens</mat-icon>
+          <mat-icon *ngIf="themeClass === 'dark'" class="check">check_circle</mat-icon>
+        </button>
+      </mat-grid-tile>
+      <mat-grid-tile>
+        <button mat-icon-button class="purple color-button" (click)="changeTheme('purple')"
+                title="{{ 'footer.beamer-description' | translate }}">
+          <mat-icon class="color-icon" matTooltip="{{ 'footer.beamer' | translate }}">lens</mat-icon>
+          <mat-icon *ngIf="themeClass === 'purple'" class="check">check_circle</mat-icon>
+        </button>
+      </mat-grid-tile>
+      <mat-grid-tile>
+        <button mat-icon-button class="blue color-button" (click)="changeTheme('blue')"
+                title="{{ 'footer.wai-description' | translate }}">
+          <mat-icon class="color-icon" matTooltip="{{ 'footer.wai' | translate }}">lens</mat-icon>
+          <mat-icon *ngIf="themeClass === 'blue'" class="check">check_circle</mat-icon>
+        </button>
+      </mat-grid-tile>
+    </mat-grid-list>
+  </mat-menu>
 
-    <mat-menu #langMenu="matMenu" [overlapTrigger]="false">
-      <button mat-menu-item (click)="useLanguage('de')" title="Deutsch">
-        {{ 'footer.german' | translate }}
-      </button>
-      <button mat-menu-item (click)="useLanguage('en')" title="Englisch">
-        {{ 'footer.english' | translate }}
-      </button>
-    </mat-menu>
-  </mat-toolbar>
-</footer>
+  <mat-menu #langMenu="matMenu" [overlapTrigger]="false">
+    <button mat-menu-item (click)="useLanguage('de')"
+            title="{{ 'footer.german-description' | translate }}">
+      {{ 'footer.german' | translate }}
+    </button>
+    <button mat-menu-item (click)="useLanguage('en')"
+            title="{{ 'footer.english-description' | translate }}">
+      {{ 'footer.english' | translate }}
+    </button>
+  </mat-menu>
+</mat-toolbar>
