--- a/src/app/components/shared/header/header.component.html
+++ b/src/app/components/shared/header/header.component.html
@@ -1,13 +1,13 @@
 <mat-toolbar class="mat-elevation-z4">
   <mat-toolbar-row>
     <button mat-icon-button *ngIf="router.url !== '/home'" (click)="goBack()"
-            matTooltip="{{'header.back' | translate}}">
+            matTooltip="{{ 'header.back' | translate }}">
       <mat-icon class="header-icons" aria-label="Go back">keyboard_arrow_left</mat-icon>
     </button>
     <span class="fill-remaining-space"></span>
     <h2 *ngIf="router.url.includes('comments') && user.role === 3 && deviceType === 'desktop'"
         fxLayoutAlign="center center">
-      {{cTime}}
+      {{ cTime }}
     </h2>
     <span class="fill-remaining-space"
           *ngIf="router.url.includes('comments') && user.role === 3 && deviceType === 'desktop'"></span>
@@ -20,19 +20,19 @@
     </mat-icon>
   </span>
     <h2 *ngIf="router.url.includes('comments')" fxLayoutAlign="center center">
-      {{'header.id' | translate}}: {{ shortId.slice(0, 4) }} {{  shortId.slice(4, 8) }}
+      {{ 'header.id' | translate }}: {{ shortId.slice(0, 4) }} {{ shortId.slice(4, 8) }}
     </h2>
     <span class="fill-remaining-space"></span>
 
     <mat-menu #userMenu="matMenu" [overlapTrigger]="false">
       <button mat-menu-item *ngIf="user" routerLink="/user">
         <mat-icon class="sessions">work</mat-icon>
-        <span *ngIf="!user.isGuest">{{'header.my-sessions' | translate}}</span>
-        <span *ngIf="user.isGuest">{{'header.visited-sessions' | translate}}</span>
+        <span *ngIf="!user.isGuest">{{ 'header.my-sessions' | translate }}</span>
+        <span *ngIf="user.isGuest">{{ 'header.visited-sessions' | translate }}</span>
       </button>
       <button mat-menu-item *ngIf="user && !user.isGuest" (click)="openDeleteUserDialog()">
         <mat-icon color="warn">delete_sweep</mat-icon>
-        <span>{{'header.delete-account' | translate}}</span>
+        <span>{{ 'header.delete-account' | translate }}</span>
       </button>
       <button mat-menu-item (click)="logout()">
         <mat-icon color="warn">exit_to_app</mat-icon>
@@ -40,14 +40,15 @@
       </button>
     </mat-menu>
 
+
     <button mat-button *ngIf="user && deviceType === 'desktop'" [matMenuTriggerFor]="userMenu"
             title="Account verwalten">
-      <div class="label-icon">
+      <span class="label-icon">
         <mat-icon *ngIf="!user.isGuest" class="header-icons">account_box</mat-icon>
         <mat-icon *ngIf="user.isGuest" class="header-icons">meeting_room</mat-icon>
-        <h2 *ngIf="!user.isGuest">{{'header.my-account' | translate}}</h2>
-        <h2 *ngIf="user.isGuest">{{'header.my-guest-account' | translate}}</h2>
-      </div>
+        <span *ngIf="!user.isGuest" class="header-text">{{ 'header.my-account' | translate }}</span>
+        <span *ngIf="user.isGuest" class="header-text">{{ 'header.my-guest-account' | translate }}</span>
+      </span>
     </button>
 
     <button mat-icon-button *ngIf="user && deviceType === 'mobile'" [matMenuTriggerFor]="userMenu"
@@ -58,10 +59,10 @@
 
     <button mat-button *ngIf="!user && deviceType === 'desktop'" (click)=login(false)
             title="Login">
-      <div class="label-icon">
+      <span class="label-icon">
         <mat-icon class="header-icons">account_box</mat-icon>
-        <h2 *ngIf="deviceType === 'desktop'">{{'header.login' | translate}}</h2>
-      </div>
+        <span *ngIf="deviceType === 'desktop'" class="header-text">{{ 'header.login' | translate }}</span>
+      </span>
     </button>
 
     <button mat-icon-button *ngIf="!user && deviceType === 'mobile'" (click)=login(false)
