--- a/src/app/components/shared/header/header.component.scss
+++ b/src/app/components/shared/header/header.component.scss
@@ -24,7 +24,7 @@ mat-toolbar {
   color: var(--primary);
 }
 
-h2 {
+h2, .header-text {
   color: var(--on-surface);
   margin-left: 5px;
   font-size: medium;
