Add main html tag to app.component.html main content

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,9 +2,11 @@
     <header>
       <app-header #header></app-header>
     </header>
-    <div fxFlex class="app-component">
-      <router-outlet></router-outlet>
-    </div>
+    <main>
+      <div fxFlex class="app-component">
+        <router-outlet></router-outlet>
+      </div>
+    </main>
     <footer>
       <app-footer></app-footer>
     </footer>
