--- a/src/app/components/shared/header/header.component.html
+++ b/src/app/components/shared/header/header.component.html
@@ -1,70 +1,68 @@
-<header>
-  <mat-toolbar class="mat-elevation-z4">
-    <mat-toolbar-row>
-      <button mat-icon-button *ngIf="router.url !== '/home'" (click)="goBack()"
-              matTooltip="{{'header.back' | translate}}">
-        <mat-icon class="header-icons" aria-label="Go back">keyboard_arrow_left</mat-icon>
-      </button>
-      <span class="fill-remaining-space"></span>
-      <h2 *ngIf="router.url.includes('comments') && user.role === 3 && deviceType === 'desktop'"
-          fxLayoutAlign="center center">
-        {{cTime}}
-      </h2>
-      <span class="fill-remaining-space"
-            *ngIf="router.url.includes('comments') && user.role === 3 && deviceType === 'desktop'"></span>
-      <span
-        *ngIf="router.url.includes('comments') && moderationEnabled"
-        class="moderation-enabled"
+<mat-toolbar class="mat-elevation-z4">
+  <mat-toolbar-row>
+    <button mat-icon-button *ngIf="router.url !== '/home'" (click)="goBack()"
+            matTooltip="{{'header.back' | translate}}">
+      <mat-icon class="header-icons" aria-label="Go back">keyboard_arrow_left</mat-icon>
+    </button>
+    <span class="fill-remaining-space"></span>
+    <h2 *ngIf="router.url.includes('comments') && user.role === 3 && deviceType === 'desktop'"
         fxLayoutAlign="center center">
+      {{cTime}}
+    </h2>
+    <span class="fill-remaining-space"
+          *ngIf="router.url.includes('comments') && user.role === 3 && deviceType === 'desktop'"></span>
+    <span
+      *ngIf="router.url.includes('comments') && moderationEnabled"
+      class="moderation-enabled"
+      fxLayoutAlign="center center">
     <mat-icon matTooltip="{{ 'header.moderation-enabled' | translate }}">
       gavel
     </mat-icon>
   </span>
-      <h2 *ngIf="router.url.includes('comments')" fxLayoutAlign="center center">
-        {{'header.id' | translate}}: {{ shortId.slice(0, 4) }} {{  shortId.slice(4, 8) }}
-      </h2>
-      <span class="fill-remaining-space"></span>
+    <h2 *ngIf="router.url.includes('comments')" fxLayoutAlign="center center">
+      {{'header.id' | translate}}: {{ shortId.slice(0, 4) }} {{  shortId.slice(4, 8) }}
+    </h2>
+    <span class="fill-remaining-space"></span>
 
-      <mat-menu #userMenu="matMenu" [overlapTrigger]="false">
-        <button mat-menu-item *ngIf="user" routerLink="/user">
-          <mat-icon class="sessions">work</mat-icon>
-          <span *ngIf="!user.isGuest">{{'header.my-sessions' | translate}}</span>
-          <span *ngIf="user.isGuest">{{'header.visited-sessions' | translate}}</span>
-        </button>
-        <button mat-menu-item *ngIf="user && !user.isGuest" (click)="openDeleteUserDialog()">
-          <mat-icon color="warn">delete_sweep</mat-icon>
-          <span>{{'header.delete-account' | translate}}</span>
-        </button>
-        <button mat-menu-item (click)="logout()">
-          <mat-icon color="warn">exit_to_app</mat-icon>
-          <span>{{ 'header.logout' | translate }}</span>
-        </button>
-      </mat-menu>
-
-      <button mat-button *ngIf="user && deviceType === 'desktop'" [matMenuTriggerFor]="userMenu" title="{{'header.accessibility-account_box_user'|translate}}">
-        <div class="label-icon">
-          <mat-icon *ngIf="!user.isGuest" class="header-icons">account_box</mat-icon>
-          <mat-icon *ngIf="user.isGuest" class="header-icons">meeting_room</mat-icon>
-          <h2 *ngIf="!user.isGuest">{{'header.my-account' | translate}}</h2>
-          <h2 *ngIf="user.isGuest">{{'header.my-guest-account' | translate}}</h2>
-        </div>
+    <mat-menu #userMenu="matMenu" [overlapTrigger]="false">
+      <button mat-menu-item *ngIf="user" routerLink="/user">
+        <mat-icon class="sessions">work</mat-icon>
+        <span *ngIf="!user.isGuest">{{'header.my-sessions' | translate}}</span>
+        <span *ngIf="user.isGuest">{{'header.visited-sessions' | translate}}</span>
       </button>
+      <button mat-menu-item *ngIf="user && !user.isGuest" (click)="openDeleteUserDialog()">
+        <mat-icon color="warn">delete_sweep</mat-icon>
+        <span>{{'header.delete-account' | translate}}</span>
+      </button>
+      <button mat-menu-item (click)="logout()">
+        <mat-icon color="warn">exit_to_app</mat-icon>
+        <span>{{ 'header.logout' | translate }}</span>
+      </button>
+    </mat-menu>
 
-      <button mat-icon-button *ngIf="user && deviceType === 'mobile'" [matMenuTriggerFor]="userMenu" title="{{'header.accessibility-account_box_user'|translate}}">
+    <button mat-button *ngIf="user && deviceType === 'desktop'" [matMenuTriggerFor]="userMenu" title="{{'header.accessibility-account_box_user' | translate}}" aria-label="header.accessibility-account_box_user | translate">
+      <div class="label-icon">
         <mat-icon *ngIf="!user.isGuest" class="header-icons">account_box</mat-icon>
         <mat-icon *ngIf="user.isGuest" class="header-icons">meeting_room</mat-icon>
-      </button>
+        <h2 *ngIf="!user.isGuest">{{'header.my-account' | translate}}</h2>
+        <h2 *ngIf="user.isGuest">{{'header.my-guest-account' | translate}}</h2>
+      </div>
+    </button>
 
-      <button mat-button *ngIf="!user && deviceType === 'desktop'" title="{{'header.accessibility-account_box_guest'|translate}}" (click)=login(false)>
-        <div class="label-icon">
-          <mat-icon class="header-icons">account_box</mat-icon>
-          <h2 *ngIf="deviceType === 'desktop'">{{'header.login' | translate}}</h2>
-        </div>
-      </button>
+    <button mat-icon-button *ngIf="user && deviceType === 'mobile'" [matMenuTriggerFor]="userMenu" title="{{'header.accessibility-account_box_user' | translate}}" aria-label="header.accessibility-account_box_user | translate">
+      <mat-icon *ngIf="!user.isGuest" class="header-icons">account_box</mat-icon>
+      <mat-icon *ngIf="user.isGuest" class="header-icons">meeting_room</mat-icon>
+    </button>
 
-      <button mat-icon-button *ngIf="!user && deviceType === 'mobile'" title="{{'header.accessibility-account_box_guest'|translate}}" (click)=login(false)>
+    <button mat-button *ngIf="!user && deviceType === 'desktop'" title="{{'header.accessibility-account_box_guest' | translate}}" aria-label="header.accessibility-account_box_guest | translate" (click)=login(false)>
+      <div class="label-icon">
         <mat-icon class="header-icons">account_box</mat-icon>
-      </button>
-    </mat-toolbar-row>
-  </mat-toolbar>
-</header>
+        <h2 *ngIf="deviceType === 'desktop'">{{'header.login' | translate}}</h2>
+      </div>
+    </button>
+
+    <button mat-icon-button *ngIf="!user && deviceType === 'mobile'" title="{{'header.accessibility-account_box_guest' | translate}}" aria-label="header.accessibility-account_box_guest | translate" (click)=login(false)>
+      <mat-icon class="header-icons">account_box</mat-icon>
+    </button>
+  </mat-toolbar-row>
+</mat-toolbar>
